# Embedded

./: LICENSE  README.md
baremetal/DogFeeder/IntegrationTest/main/: CMakeLists.txt  Integration_Main.cpp
baremetal/DogFeeder/IntegrationTest/main/LibraryModule-1.0-Source/: CMakeLists.txt
baremetal/DogFeeder/IntegrationTest/main/LibraryModule-1.0-Source/Components/Objects/: CMakeLists.txt
baremetal/DogFeeder/IntegrationTest/main/LibraryModule-1.0-Source/coverage/: coverage.xml
baremetal/DogFeeder/IntegrationTest/main/LibraryModule-1.0-Source/coverage/html/: index.Components_Actuator_ServoMotor_include_MG996R.hpp.html  index.Components_Actuator_ServoMotor_src_MG996R.cpp.html  index.Components_Actuator_ServoMotor_test_test_main.cpp.html  index.Components_Actuator_ServoMotor_test_test_servo_test.cpp.html  index.Components_AnalysisTools_ImageAnalysis_OpenCV_src_Background_Extractor.cpp.html  index.Components_AnalysisTools_ImageAnalysis_OpenCV_src_ConnectedComponents.cpp.html  index.Components_AnalysisTools_ImageAnalysis_OpenCV_src_Utility_Image.cpp.html  index.Components_AnalysisTools_ImageAnalysis_OpenCV_test_test_bkg_test.cpp.html  index.Components_AnalysisTools_ImageAnalysis_OpenCV_test_test_main.cpp.html  index.Components_Connector_WiFi_src_WiFi_API.cpp.html  index.Components_Connector_WiFi_test_test_main.cpp.html  index.Components_Connector_WiFi_test_test_wifi_test.cpp.html  index.Components_Interfaces_ADCBase_include_ADCBase.hpp.html  index.Components_Interfaces_ActuatorBase_include_Actuator_Base.hpp.html  index.Components_Interfaces_Camera_include_Camera.hpp.html  index.Components_Interfaces_PWMBase_include_PWMBase.hpp.html  (+92 more)
baremetal/DogFeeder/IntegrationTest/main/integration_test/: main_integration.cpp
baremetal/DogFeeder/IntegrationTest/main/integration_test/include/: main_integration.hpp
baremetal/DogFeeder/Release/main/: CMakeLists.txt
baremetal/DogFeeder/Release/main/LibraryModule-1.0-Source/: .gitignore
baremetal/DogFeeder/Release/main/LibraryModule-1.0-Source/coverage/: coverage.xml
baremetal/DogFeeder/Release/main/LibraryModule-1.0-Source/docs/: Doxyfile
baremetal/WaterMeter/IntegrationTest/main/LibraryModule-1.0-Source/Components/: CMakeLists.txt
linux/CCTV/CCTV_REMOTE_V1/src/: CMakeLists.txt  Detector.cpp
linux/CCTV/CCTV_REMOTE_V1/src/components/: Image_Helper_v2.cpp  RPICam_Capture.cpp  System_Overall.cpp
linux/CCTV/CCTV_REMOTE_V1/src/components/include/: Image_Helper_v2.hpp  RPICam_Capture.hpp  System_Overall.hpp
linux/RPI/OutDoorMain_CCTV/: CMakeLists.txt  Makefile  README.md
linux/RPI/OutDoorMain_CCTV/IntegrationTest/: CMakeLists.txt  Integration_Main.cpp
linux/RPI/OutDoorMain_CCTV/IntegrationTest/components/include/: Image_Helper_v2.hpp  RPICam_Capture.hpp  System_Overall.hpp
linux/RPI/OutDoorMain_CCTV/IntegrationTest/components/src/: Image_Helper_v2.cpp  RPICam_Capture.cpp  System_Overall.cpp
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/Components/Controller/: CMakeLists.txt
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/Components/Global_Include/: Database_ID_Base.hpp
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/Components/Objects/: CMakeLists.txt
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/Components/User/: CMakeLists.txt
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/coverage/html/: index.Components_Actuator_ServoMotor_test_test_main.cpp.html  index.Components_Connector_WiFi_test_test_wifi_test.cpp.html  index.Components_Interfaces_PWMBase_include_PWMBase.hpp.html  index.Components_Interfaces_QueryBase_include_QueryBase.hpp.html  index.Components_Objects_ADC_test_test_ADC_test.cpp.html  index.Components_Objects_ErrorHandler_test_test_main.cpp.html  index.Components_Objects_FaultHandler_test_test_fault_test.cpp.html  index.Components_Objects_Gpio_include_GPIO_API.hpp.html  index.Components_Objects_PWM_test_test_main.cpp.html  index.Components_Objects_QueryTools_include_QueryAddSensorData.hpp.html  index.Components_Objects_QueryTools_test_test_querytools_test.cpp.html  index.Components_Protocols_HTTP_src_http_interface.cpp.html  index.Components_RTOS_FreeRTOS_include_Task.h.html  index.Components_Sensor_RpiCamV2_test_test_main.cpp.html  index.html
linux/RPI/OutDoorMain_CCTV/LibraryModule-1.0-Source/docs/html/: dir_000015_000087.html  dir_000049_000121.html  dir_000063_000122.html  dir_08ceff3b48ef7c8cf323deb34cef43d1.html  dir_08f45fe6822aeb4ce2bc268e3b1361be.html  dir_136359f0a97ffabec4c9c21f596fbc70.html  dir_136359f0a97ffabec4c9c21f596fbc70_dep.md5  dir_21acfc905ae8f5aba388f62b4244bcd8_dep.map  dir_24dd99f1a0217daee0c511138c011434.html  dir_24dd99f1a0217daee0c511138c011434_dep.map  dir_2adb134bda58972baa19a2757a006c6d.html  dir_33116ba6b87f74ab157905ddc7fff20f.js  dir_37d4095d275001d65c806a5dbc7f0a6c.html  dir_37d4095d275001d65c806a5dbc7f0a6c_dep.md5  dir_3c3752b19bb1a05eea93610f6b869178.html  dir_3c3752b19bb1a05eea93610f6b869178_dep.md5  dir_40964ce11dc14dca7093559234f330b0_dep.md5  dir_4816d2fb8abcfd1fbfb7e56b67e0baa1_dep.md5  dir_49a3e00ee8d2affa254b84776e77d5b3_dep.map  dir_49d882431a7f85268840d4f2e0bb311d.js  dir_4ca6fec43e1013816363be86d31756d6_dep.md5  dir_4d0b0adf7e9fb892c3df556e9cbb05d0_dep.md5  dir_4d3e36ae3c6cc4721587fdcd1a04bdfb_dep.map  dir_58e57273c6fda1afc4140e514acd64fd.html  dir_58e57273c6fda1afc4140e514acd64fd_dep.md5  dir_5a8ae08cfe847631433021fb4227a90d_dep.map  dir_6a49a4a01df89ea000e629175e7db917.html  dir_6a49a4a01df89ea000e629175e7db917_dep.md5  dir_6c3c004b76948dafbc0edb4dd06b00d6.js  dir_797581180f013076d33980f1a278e2ff_dep.md5  dir_81adee8f31fef3ec32838cfb7db51f35.html  dir_829e270a5c9ff36a124c63fe91116b2f_dep.md5  dir_829eea574d5fe962226ae6a4579d6a03_dep.map  dir_82ded42a354899f45d973ba210f96b3d_dep.map  dir_8b8599f8856b4d1446653a790f5ca47f.html  dir_8e42ae9194b224a610afb30855b0ed3f_dep.map  dir_8e42ae9194b224a610afb30855b0ed3f_dep.md5  dir_941830e8faa9dddffcbc1cfc411e2e9c_dep.map  dir_9eed79da3e1319d2639b9ea1a6367e41.html  dir_9eed79da3e1319d2639b9ea1a6367e41_dep.map  (+29 more)
linux/RPI/OutDoorMain_CCTV/Release/: CMakeLists.txt  Release_Main.cpp
(+1786 files in other folders)
